syntax = 'proto3';

option go_package = 'github.com/niakr1s/shtrafovnet/services/companyInfoGetter';

import "google/api/annotations.proto";

service CompanyInfoGetter {
    rpc GetCompanyInfo (GetCompanyInfoRequest) returns (GetCompanyInfoResponse) {
        option (google.api.http) = {
            get: "/v1/getCompanyInfo/{inn}"
        };
    }
}

message GetCompanyInfoRequest {
    string inn = 1;
}

 message GetCompanyInfoResponse {
     string inn = 1;
     string kpp = 2;
     string name = 3;
     string chief = 4;
 }